--- a/laba6/laba6.ipynb
+++ b/laba6/laba6.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "4  182.6    180.9"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x190712a9780>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1ab29f93780>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,13 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def t_student(data):\n",
     "    data['Різниця(d)'] = None\n",
-    "    data['Різниця(d)'] = (data.iloc[:,0] - data.iloc[:,1])\n",
+    "    for i in range(data.shape[0]):\n",
+    "        if data.iloc[i,0] == 0 or data.iloc[i,1] == 0:\n",
+    "            data['Різниця(d)'][i] = 0;\n",
+    "        else:\n",
+    "            data['Різниця(d)'][i] = (data.iloc[i,0] - data.iloc[i,1])\n",
     "    Md = sum(data.iloc[:,2])/n\n",
     "    sum_d = 0\n",
     "    for i in range(n):\n",
@@ -233,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -252,12 +256,23 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\1\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  import sys\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "[-0.8536145924000886, 4, 'not significant']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
