--- a/laba7/laba7.ipynb
+++ b/laba7/laba7.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "6              39              42"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,16 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1c236cdadd8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x264ba03e198>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -166,27 +166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Significant: 2.1241830065359473(дано) < 4.28(табличне)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[2.1241830065359473, 'significant']"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def liven(data):\n",
     "    Md1 = sum(data.iloc[:, 0])/n\n",
@@ -229,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +244,7 @@
     "        print(\"Significant: \"+ str(t)+\"(дано)\" + \" < \"+ str(c)+\"(табличне)\")\n",
     "        znach = \"significant\"\n",
     "    \n",
-    "    ans = [t, znach]\n",
+    "    ans = [t, df, znach]\n",
     "    return ans"
    ]
   },
@@ -275,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -290,10 +272,10 @@
     {
      "data": {
       "text/plain": [
-       "[0.4808564910677262, 'significant']"
+       "[0.4808564910677262, 6, 'significant']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
