--- a/add/add.ipynb
+++ b/add/add.ipynb
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h6>3.Далі необхідно призначити рангів для відсортованих точок даних. Дати прив’язаним значенням середню оцінку.</h6>\n",
+    "<h6>3.Далі необхідно призначити ранги для відсортованих точок даних. Дати прив’язаним значенням середню оцінку.</h6>\n",
     "<table>\n",
     "    <tr><th>Вибірка</th><th>Ранг</th></tr>\n",
     "    <tr><td>$x_{32}$</td><td>1</td></tr>\n",
@@ -131,13 +131,12 @@
    "metadata": {},
    "source": [
     "<h6>4.Знайти суми рангів кожної групи:<br/></h6>\n",
-    "    Група 1: 2 + 8 + 9 = 19<br/>\n",
-    "    Група 2: 3 + 5 + 6 = 14<br/>\n",
-    "    Група 3: 1 + 4 + 7 = 12"
+    "   $ Група 1: 2 + 8 + 9 = 19$<br/>\n",
+    "    $Група 2: 3 + 5 + 6 = 14$<br/>\n",
+    "   $ Група 3: 1 + 4 + 7 = 12$"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -147,13 +146,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "де n - загальна кількість спостережень<br/>\n",
-    "ni - кількість спостережень у кожній з вибірок<br/>\n",
-    "Ri - сума рангів<br/>\n",
+    "де $n$ - загальна кількість спостережень<br/>\n",
+    "$n_i$ - кількість спостережень у кожній з вибірок<br/>\n",
+    "$R_i$ - сума рангів<br/>\n",
     "$$H = \\left[\\frac{12}{9(9+1)}\\left[\\frac{19^2}{3}+\\frac{14^2}{3}+\\frac{12^2}{3}\\right]-3(9+1)\\right]=1.1555$$"
    ]
   },
@@ -161,16 +159,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h6>6.Знайти критичне значення квадратного Xi-квадрата зі ступенем свободи c-1. У нашому випадку с = 3.<br/></h6>\n",
-    "df = 3-1 = 2<br/>\n",
-    "dfcrit = 6"
+    "<h6>6.Знайти критичне значення критерія Краскела-Уолліса з таблиці критичних значень"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "У нашому випадку 1.1555 < 6, тому нульова гіпотеза приймається"
+    "Так як у нас 3 групи, тому скористаємось таблицею для 3-х груп.<br/>\n",
+    "Розмір нашої таблиці 9.<br/>\n",
+    "У таблиці значенню розміру 9 відповідає критичне значення $5.831$.<br/>\n",
+    "$1.1555 < 5.831$ - нульова гіпотеза приймається"
    ]
   },
   {
@@ -186,9 +185,9 @@
    "source": [
     "Нехай маємо фабрику, яка виготовляє взуття. Взуттєва компанія хоче знати, чи мають три групи робітників різні зарплати:<br/>\n",
     "<table>\n",
-    "        <tr><th>Жінки</th> <td>30000, 41000, 54000, 66000, 78000</td></tr>\n",
-    "       <tr> <th>Чоловіки</th> <td>45000, 55000, 60000, 70000, 72000</td></tr>\n",
-    "        <tr><th>Меншини</th> <td>18000, 30000, 34000, 40000, 44000</td></tr>\n",
+    "        <tr><th>Жінки</th> <td>$30000, 41000, 54000, 66000, 78000$</td></tr>\n",
+    "       <tr> <th>Чоловіки</th> <td>$45000, 55000, 60000, 70000, 72000$</td></tr>\n",
+    "        <tr><th>Меншини</th> <td>$18000, 30000, 34000, 40000, 44000$</td></tr>\n",
     "</table>"
    ]
   },
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +338,7 @@
        "14  Minorities   44000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +488,7 @@
        "4        Women   78000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +650,7 @@
        "4        Women   78000     15"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,19 +685,22 @@
     "    group2 = 0\n",
     "    group3 = 0\n",
     "    for i in range(n):\n",
-    "        if df.iloc[i,0] == 'Men':\n",
+    "        if df.iloc[i,0] == df[\"Groups\"].unique()[0]:\n",
     "            group1+=df.iloc[i,2]\n",
-    "        if df.iloc[i,0] == 'Women':\n",
+    "        if df.iloc[i,0] == df[\"Groups\"].unique()[1]:\n",
     "            group2+=df.iloc[i,2]\n",
-    "        if df.iloc[i,0] == 'Minorities':\n",
+    "        if df.iloc[i,0] == df[\"Groups\"].unique()[2]:\n",
     "            group3+=df.iloc[i,2]\n",
-    "    H = 12/(n*(n+1))*(group1**2/5 + group2**2/5 + group3**2/5) - 3*(n+1)\n",
-    "    DF = len(df[\"Groups\"].unique())-1\n",
-    "    c = pd.read_excel(\"Таблиця критичних значень для критерію Пірсона.xlsx\").iloc[DF, 2]\n",
+    "            \n",
+    "    amount = df[\"Groups\"].value_counts()[0]\n",
+    "    table = len(df[\"Groups\"].unique())\n",
+    "    H = 12/(n*(n+1))*(group1**2/amount + group2**2/amount + group3**2/amount) - 3*(n+1)\n",
+    "    c = pd.read_excel(str(table) + \"groups.xlsx\").iloc[n, 1] if n <= 25 else pd.read_excel(str(table) + \"groups.xlsx\").iloc[26, 1]\n",
     "    print(\"Критичне значення:\", c)\n",
     "    print(\"Дано:\", H)\n",
     "    print(\"Розбіжність існує \" + str(H) + \"(Дано) > \" + str(c) + \"(критичне). Нульова гіпотеза відкидається.\" if (H > c) else \"Розбіжності немає. Нульова гіпотеза приймається\")\n",
-    "    return [DF, H, c]"
+    "    print()\n",
+    "    return [H, c]"
    ]
   },
   {
@@ -710,25 +712,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Критичне значення: 6\n",
+      "Критичне значення: 5.902\n",
       "Дано: 6.720000000000006\n",
-      "Розбіжність існує 6.720000000000006(Дано) > 6(критичне). Нульова гіпотеза відкидається.\n"
+      "Розбіжність існує 6.720000000000006(Дано) > 5.902(критичне). Нульова гіпотеза відкидається.\n",
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[2, 6.720000000000006, 6]"
+       "[6.720000000000006, 5.902]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
